# servalx

./: .gitignore  Makefile  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
servalx/: META.py  android.py  androzoo.py  apk.py  artifacts.py  commands.py  couch.py  dvm.py  elastic.py  environ.py  extractions.py  features.py  functions.py  hybrids.py  indexes.py  manifest.py  package.py  resources.py  timezones.py  validators.py  virustotal.py
servalx/mapping/: apkindex.json  celery.json
tests/: config.py  test_androzoo.py  test_apk.py  test_artifacts.py  test_commands.py  test_couch.py  test_dvm.py  test_extractions.py  test_features.py  test_functions.py  test_hybrids.py  test_indexes.py  test_manifest.py  test_package.py  test_resources.py  test_validators.py  test_virustotal.py
tests/res/: APK.py  ARTIFACTS.py  DVM.py  EXTRAS.py  FEATS.py  HYBRIDS.py  INDEX.py  LABEL.py  MANIFEST.py  METAS.py  RESOURCES.py  VIRUSTOTAL.py
tests/res/examples/: a.rsa
tests/res/examples/apkinfos/: 006F23C60387CC93C3FAC540E6CDBF070007DE8038BC86D02455C8407E8F84DD.json  00B46EEB4FBEF2E743FDFF0518C1E6258DAC8ED75E41688775CF7E55016BC3F7.json
