[check]
strict = 1
metadata = 1
restructuredtext = 1

[flake8]
doctests = True
max-line-length = 800
ignore = E266, E731

[metadata]
license-file = LICENSE.txt
description-file = README.rst

[bdist_wheel]
universal = 1

[build_sphinx]
all_files = 1
builder = html
build-dir = docs/
source-dir = docs/
warning-is-error = 1

[tool:pytest]
testpaths = tests/
addopts = --strict -n auto

[coverage:run]
source = src
branch = True

[coverage:report]
fail_under = 80
